crates/toml/tests/snapshots/invalid/control/linetab-number-01.stderr
TOML parse error at line 1, column 21
  |
1 | linetab-number-01 = 1
  |                     ^^
string values must be quoted, expected literal string
